@@ -1,3 +1,8 @@
+2010-07-06  Rolf Bjarne Kvinge  <RKvinge@novell.com>
+
+	* Builder.cs: Wait for stdout/stderr threads to finish when the process has
+	exited.
+
 2010-06-11  Andrew Jorgensen  <ajorgensen@novell.com>
 
 	* Builder.cs: Add upload_files and working_directory
